Use PtFileChooser when exporting a GIF or PNG.  Added ExtensionFilenameFilter so that it can extend PtFilenameFilter and be used with PtFileChooser. BrowserEffigy now handles files with a content-type that starts with 'image/'.